@@ -5,6 +5,7 @@ from commands.parsing import *
 from tradedb import AmbiguityError
 from tradedb import System, Station
 from tradedb import TradeDB
+from formatting import max_len
 
 import cache
 import csvexport
@@ -444,7 +445,7 @@ def render(results, cmdenv, tdb):
 
     print("Price Age.:", pricesAge)
 
-    def makeBest(rows, explanation, alt, starFn):
+    def makeBest(rows, explanation, alt, maxLen, starFn):
         if not rows:
             return "[n/a]"
         best = []
@@ -457,8 +458,9 @@ def render(results, cmdenv, tdb):
 
         bestText = "("+explanation+")"
         for irow in best:
-            bestText += "\n    {:<30} @ {:7n}cr (Avg {} {:7n}cr)".format(
-                    irow[0].item.name() + irow[1],
+            bestText += "\n    {:<{}} @ {:7n}cr (Avg {} {:7n}cr)".format(
+                    irow[0].item.name(cmdenv.detail) + irow[1],
+                    maxLen + 1,
                     irow[0].price,
                     alt,
                     irow[0].avgTrade,
@@ -466,13 +468,17 @@ def render(results, cmdenv, tdb):
         return bestText
 
 
+    longestNameLen = max(
+        max_len(results.summary.selling, key=lambda row: row.item.name(cmdenv.detail)),
+        max_len(results.summary.buying, key=lambda row: row.item.name(cmdenv.detail)),
+    )
     print("Best Buy..:", makeBest(
-            results.summary.selling, "Buy from this station", "Sell",
+            results.summary.selling, "Buy from this station", "Sell", longestNameLen,
             starFn=lambda price, avgCr: \
                 price <= (avgCr * 0.9),
     ))
     print("Best Sale.:", makeBest(
-            results.summary.buying, "Sell to this station", "Cost",
+            results.summary.buying, "Sell to this station", "Cost", longestNameLen,
             starFn=lambda price, avgCr: \
                 price >= (avgCr * 1.1),
     ))
